--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@hapi/joi": "^15.1.1",
     "express": "^4.17.1",
+    "helmet": "^3.20.1",
     "mongoose": "^5.6.11",
+    "morgan": "^1.9.1",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
