--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "set DEBUG=app:startup,app:db&&set NODE_ENV=development&& nodemon app.js"
   },
   "keywords": [
     "ChatApp",
@@ -16,10 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^15.1.1",
+    "config": "^3.2.2",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.20.1",
     "mongoose": "^5.6.11",
     "morgan": "^1.9.1",
+    "pug": "^2.0.4",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
