--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^15.1.1",
+    "bcrypt": "^3.0.6",
     "config": "^3.2.2",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.20.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.6.11",
     "morgan": "^1.9.1",
     "pug": "^2.0.4",
